// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculatePrices should apply flat and percentage surcharges 1`] = `
Object {
  "prices": Array [
    Object {
      "lineItems": Array [
        Object {
          "price": 211000000,
          "priceId": 201,
          "quantity": 1,
          "total": 211000000,
        },
        Object {
          "price": 222000000,
          "priceId": 202,
          "quantity": 1,
          "total": 222000000,
        },
      ],
      "price": 111000000,
      "priceId": 101,
      "quantity": 1,
      "thresholds": Array [],
      "total": 111000000,
    },
    Object {
      "lineItems": Array [
        Object {
          "price": 211000000,
          "priceId": 201,
          "quantity": 1,
          "total": 211000000,
        },
        Object {
          "price": 222000000,
          "priceId": 202,
          "quantity": 2,
          "total": 444000000,
        },
      ],
      "price": 122000000,
      "priceId": 102,
      "quantity": 2,
      "thresholds": Array [],
      "total": 244000000,
    },
  ],
  "summary": Object {
    "billableItemsTotal": 1743000000,
    "calculations": Object {
      "surcharges": Array [
        Array [
          Object {
            "amount": 411000000,
            "billableServiceId": 1,
            "calculation": "flat",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 411000000,
            "surchargeId": 1,
            "total": null,
          },
          Object {
            "amount": 402000000,
            "billableServiceId": 1,
            "calculation": "flat",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 402000000,
            "surchargeId": 2,
            "total": null,
          },
          Object {
            "amount": 45843000,
            "billableServiceId": 1,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 41300000,
            "surchargeId": 3,
            "total": 111000000,
          },
          Object {
            "amount": 87143000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 41300000,
            "rateId": 406,
            "surchargeId": 3,
            "total": 211000000,
          },
          Object {
            "amount": 85244000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 211000000,
          },
          Object {
            "amount": 89688000,
            "billableLineItemId": 2,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 222000000,
          },
          Object {
            "amount": 44844000,
            "billableServiceId": 1,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 40400000,
            "surchargeId": 4,
            "total": 111000000,
          },
          Object {
            "amount": 87143000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 41300000,
            "rateId": 406,
            "surchargeId": 3,
            "total": 211000000,
          },
          Object {
            "amount": 85244000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 211000000,
          },
          Object {
            "amount": 89688000,
            "billableLineItemId": 2,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 222000000,
          },
        ],
        Array [
          Object {
            "amount": 422000000,
            "billableServiceId": 2,
            "calculation": "flat",
            "materialBasedPricing": true,
            "materialId": 2,
            "rate": 422000000,
            "surchargeId": 1,
            "total": null,
          },
          Object {
            "amount": 402000000,
            "billableServiceId": 2,
            "calculation": "flat",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 402000000,
            "surchargeId": 2,
            "total": null,
          },
          Object {
            "amount": 49288000,
            "billableServiceId": 2,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 40400000,
            "surchargeId": 4,
            "total": 122000000,
          },
          Object {
            "amount": 87143000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 41300000,
            "rateId": 406,
            "surchargeId": 3,
            "total": 211000000,
          },
          Object {
            "amount": 85244000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 211000000,
          },
          Object {
            "amount": 179376000,
            "billableLineItemId": 2,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 444000000,
          },
        ],
      ],
      "taxes": null,
    },
    "grandTotal": 5975939000,
    "lineItemsTotal": 1743000000,
    "servicesTotal": 355000000,
    "surchargesTotal": 3877939000,
    "taxesTotal": 0,
    "thresholdsTotal": 0,
    "total": 2098000000,
  },
}
`;

exports[`calculatePrices should apply flat surcharges even if it's disabled by billable item config 1`] = `
Object {
  "prices": Array [
    Object {
      "lineItems": Array [
        Object {
          "price": 211000000,
          "priceId": 201,
          "quantity": 1,
          "total": 211000000,
        },
        Object {
          "price": 222000000,
          "priceId": 202,
          "quantity": 1,
          "total": 222000000,
        },
      ],
      "price": 111000000,
      "priceId": 101,
      "quantity": 1,
      "thresholds": Array [],
      "total": 111000000,
    },
    Object {
      "lineItems": Array [
        Object {
          "price": 211000000,
          "priceId": 201,
          "quantity": 1,
          "total": 211000000,
        },
        Object {
          "price": 222000000,
          "priceId": 202,
          "quantity": 2,
          "total": 444000000,
        },
      ],
      "price": 122000000,
      "priceId": 102,
      "quantity": 2,
      "thresholds": Array [],
      "total": 244000000,
    },
  ],
  "summary": Object {
    "billableItemsTotal": 1743000000,
    "calculations": Object {
      "surcharges": Array [
        Array [
          Object {
            "amount": 411000000,
            "billableServiceId": 1,
            "calculation": "flat",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 411000000,
            "surchargeId": 1,
            "total": null,
          },
          Object {
            "amount": 402000000,
            "billableServiceId": 1,
            "calculation": "flat",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 402000000,
            "surchargeId": 2,
            "total": null,
          },
        ],
        Array [
          Object {
            "amount": 422000000,
            "billableServiceId": 2,
            "calculation": "flat",
            "materialBasedPricing": true,
            "materialId": 2,
            "rate": 422000000,
            "surchargeId": 1,
            "total": null,
          },
          Object {
            "amount": 402000000,
            "billableServiceId": 2,
            "calculation": "flat",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 402000000,
            "surchargeId": 2,
            "total": null,
          },
        ],
      ],
      "taxes": null,
    },
    "grandTotal": 4559000000,
    "lineItemsTotal": 1743000000,
    "servicesTotal": 355000000,
    "surchargesTotal": 2461000000,
    "taxesTotal": 0,
    "thresholdsTotal": 0,
    "total": 2098000000,
  },
}
`;

exports[`calculatePrices should apply taxes 1`] = `
Object {
  "prices": Array [
    Object {
      "lineItems": Array [
        Object {
          "price": 211000000,
          "priceId": 201,
          "quantity": 1,
          "total": 211000000,
        },
        Object {
          "price": 222000000,
          "priceId": 202,
          "quantity": 1,
          "total": 222000000,
        },
      ],
      "price": 111000000,
      "priceId": 101,
      "quantity": 1,
      "thresholds": Array [],
      "total": 111000000,
    },
    Object {
      "lineItems": Array [
        Object {
          "price": 211000000,
          "priceId": 201,
          "quantity": 1,
          "total": 211000000,
        },
        Object {
          "price": 222000000,
          "priceId": 202,
          "quantity": 2,
          "total": 444000000,
        },
      ],
      "price": 122000000,
      "priceId": 102,
      "quantity": 2,
      "thresholds": Array [],
      "total": 244000000,
    },
  ],
  "summary": Object {
    "billableItemsTotal": 1743000000,
    "calculations": Object {
      "surcharges": Array [
        Array [
          Object {
            "amount": 411000000,
            "billableServiceId": 1,
            "calculation": "flat",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 411000000,
            "surchargeId": 1,
            "total": null,
          },
          Object {
            "amount": 402000000,
            "billableServiceId": 1,
            "calculation": "flat",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 402000000,
            "surchargeId": 2,
            "total": null,
          },
          Object {
            "amount": 45843000,
            "billableServiceId": 1,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 41300000,
            "surchargeId": 3,
            "total": 111000000,
          },
          Object {
            "amount": 87143000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 41300000,
            "rateId": 406,
            "surchargeId": 3,
            "total": 211000000,
          },
          Object {
            "amount": 85244000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 211000000,
          },
          Object {
            "amount": 89688000,
            "billableLineItemId": 2,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 222000000,
          },
          Object {
            "amount": 44844000,
            "billableServiceId": 1,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 40400000,
            "surchargeId": 4,
            "total": 111000000,
          },
          Object {
            "amount": 87143000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 41300000,
            "rateId": 406,
            "surchargeId": 3,
            "total": 211000000,
          },
          Object {
            "amount": 85244000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 211000000,
          },
          Object {
            "amount": 89688000,
            "billableLineItemId": 2,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 222000000,
          },
        ],
        Array [
          Object {
            "amount": 422000000,
            "billableServiceId": 2,
            "calculation": "flat",
            "materialBasedPricing": true,
            "materialId": 2,
            "rate": 422000000,
            "surchargeId": 1,
            "total": null,
          },
          Object {
            "amount": 402000000,
            "billableServiceId": 2,
            "calculation": "flat",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 402000000,
            "surchargeId": 2,
            "total": null,
          },
          Object {
            "amount": 49288000,
            "billableServiceId": 2,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 40400000,
            "surchargeId": 4,
            "total": 122000000,
          },
          Object {
            "amount": 87143000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1,
            "rate": 41300000,
            "rateId": 406,
            "surchargeId": 3,
            "total": 211000000,
          },
          Object {
            "amount": 85244000,
            "billableLineItemId": 1,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 211000000,
          },
          Object {
            "amount": 179376000,
            "billableLineItemId": 2,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 2,
            "rate": 40400000,
            "rateId": 409,
            "surchargeId": 4,
            "total": 444000000,
          },
        ],
      ],
      "taxes": Array [
        Object {
          "12": Object {
            "description": "Colorado",
            "name": "Colorado",
            "type": "primary",
            "updatedAt": 2021-08-30T17:47:06.546Z,
            "values": Array [
              Object {
                "amount": 5000000,
                "application": "each",
                "billableLineItemId": 1,
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "lineItemId": null,
                "quantity": 1,
                "rate": 5000000,
                "totalWithSurcharges": 555774000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 6000000,
                "application": "each",
                "billableLineItemId": 2,
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "lineItemId": null,
                "quantity": 1,
                "rate": 6000000,
                "totalWithSurcharges": 401376000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 202937400,
                "application": null,
                "billableServiceId": 1,
                "calculation": "percentage",
                "includingSurcharges": true,
                "percentageRate": 20000000,
                "quantity": 1,
                "rate": 20000000,
                "totalWithSurcharges": 1014687000,
                "type": "service",
              },
              Object {
                "amount": 30000000,
                "application": "order",
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "materialId": 1,
                "quantity": 1,
                "rate": 30000000,
                "totalWithSurcharges": 1014687000,
                "type": "material",
              },
            ],
          },
          "13": Object {
            "description": "Denver City",
            "name": "Denver City",
            "type": "municipal",
            "updatedAt": 2021-08-30T17:47:06.546Z,
            "values": Array [
              Object {
                "amount": 5000000,
                "application": "each",
                "billableLineItemId": 1,
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "lineItemId": null,
                "quantity": 1,
                "rate": 5000000,
                "totalWithSurcharges": 555774000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 6000000,
                "application": "each",
                "billableLineItemId": 2,
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "lineItemId": null,
                "quantity": 1,
                "rate": 6000000,
                "totalWithSurcharges": 401376000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 202937400,
                "application": null,
                "billableServiceId": 1,
                "calculation": "percentage",
                "includingSurcharges": true,
                "percentageRate": 20000000,
                "quantity": 1,
                "rate": 20000000,
                "totalWithSurcharges": 1014687000,
                "type": "service",
              },
              Object {
                "amount": 30000000,
                "application": "order",
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "materialId": 1,
                "quantity": 1,
                "rate": 30000000,
                "totalWithSurcharges": 1014687000,
                "type": "material",
              },
            ],
          },
        },
        Object {
          "12": Object {
            "description": "Colorado",
            "name": "Colorado",
            "type": "primary",
            "updatedAt": 2021-08-30T17:47:06.546Z,
            "values": Array [
              Object {
                "amount": 5000000,
                "application": "each",
                "billableLineItemId": 1,
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "lineItemId": null,
                "quantity": 1,
                "rate": 5000000,
                "totalWithSurcharges": 383387000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 6000000,
                "application": "each",
                "billableLineItemId": 2,
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "lineItemId": null,
                "quantity": 2,
                "rate": 6000000,
                "totalWithSurcharges": 623376000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 111728800,
                "application": null,
                "billableServiceId": 2,
                "calculation": "percentage",
                "includingSurcharges": true,
                "percentageRate": 20000000,
                "quantity": 1,
                "rate": 20000000,
                "totalWithSurcharges": 558644000,
                "type": "service",
              },
              Object {
                "amount": 30000000,
                "application": "order",
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "materialId": 2,
                "quantity": 1,
                "rate": 30000000,
                "totalWithSurcharges": 558644000,
                "type": "material",
              },
            ],
          },
          "13": Object {
            "description": "Denver City",
            "name": "Denver City",
            "type": "municipal",
            "updatedAt": 2021-08-30T17:47:06.546Z,
            "values": Array [
              Object {
                "amount": 5000000,
                "application": "each",
                "billableLineItemId": 1,
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "lineItemId": null,
                "quantity": 1,
                "rate": 5000000,
                "totalWithSurcharges": 383387000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 6000000,
                "application": "each",
                "billableLineItemId": 2,
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "lineItemId": null,
                "quantity": 2,
                "rate": 6000000,
                "totalWithSurcharges": 623376000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 111728800,
                "application": null,
                "billableServiceId": 2,
                "calculation": "percentage",
                "includingSurcharges": true,
                "percentageRate": 20000000,
                "quantity": 1,
                "rate": 20000000,
                "totalWithSurcharges": 558644000,
                "type": "service",
              },
              Object {
                "amount": 30000000,
                "application": "order",
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "materialId": 2,
                "quantity": 1,
                "rate": 30000000,
                "totalWithSurcharges": 558644000,
                "type": "material",
              },
            ],
          },
        },
      ],
    },
    "grandTotal": 6769271400,
    "lineItemsTotal": 1743000000,
    "servicesTotal": 355000000,
    "surchargesTotal": 3877939000,
    "taxesTotal": 793332400,
    "thresholdsTotal": 0,
    "total": 2098000000,
  },
}
`;

exports[`calculatePrices should apply taxes linked to existing order 1`] = `
Object {
  "prices": Array [
    Object {
      "lineItems": Array [
        Object {
          "price": 440000000,
          "priceId": 1,
          "quantity": 2,
          "total": 880000000,
        },
        Object {
          "price": 206800000,
          "priceId": 1,
          "quantity": 1,
          "total": 206800000,
        },
      ],
      "price": 110000000,
      "priceId": 1,
      "quantity": 1,
      "thresholds": Array [
        Object {
          "price": 23000000,
          "priceId": 1,
          "quantity": 59,
          "total": 1357000000,
        },
      ],
      "total": 110000000,
    },
  ],
  "summary": Object {
    "billableItemsTotal": 2443800000,
    "calculations": Object {
      "surcharges": Array [
        Array [
          Object {
            "amount": 3300000,
            "billableLineItemId": null,
            "billableServiceId": 1882,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1819,
            "quantity": 1,
            "surchargeId": 663,
            "thresholdId": null,
            "total": 110000000,
          },
          Object {
            "amount": 26400000,
            "billableLineItemId": 1289,
            "billableServiceId": null,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1819,
            "quantity": 2,
            "surchargeId": 663,
            "thresholdId": null,
            "total": 880000000,
          },
          Object {
            "amount": 6200000,
            "billableLineItemId": 1157,
            "billableServiceId": null,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1819,
            "quantity": 1,
            "surchargeId": 663,
            "thresholdId": null,
            "total": 206800000,
          },
          Object {
            "amount": 29700000,
            "billableLineItemId": null,
            "billableServiceId": 1882,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1819,
            "quantity": 1,
            "surchargeId": 664,
            "thresholdId": null,
            "total": 110000000,
          },
          Object {
            "amount": 237600000,
            "billableLineItemId": 1289,
            "billableServiceId": null,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1819,
            "quantity": 2,
            "surchargeId": 664,
            "thresholdId": null,
            "total": 880000000,
          },
          Object {
            "amount": 55840000,
            "billableLineItemId": 1157,
            "billableServiceId": null,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1819,
            "quantity": 1,
            "surchargeId": 664,
            "thresholdId": null,
            "total": 206800000,
          },
          Object {
            "amount": 366390000,
            "billableLineItemId": null,
            "billableServiceId": null,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": null,
            "quantity": 59,
            "surchargeId": 664,
            "thresholdId": 371,
            "total": 1357000000,
          },
          Object {
            "amount": 201000000,
            "billableLineItemId": null,
            "billableServiceId": null,
            "calculation": "flat",
            "materialBasedPricing": false,
            "materialId": 1819,
            "quantity": 1,
            "surchargeId": 694,
            "thresholdId": null,
          },
        ],
      ],
      "taxes": Array [
        Object {
          "2392": Object {
            "description": "Hawaii State",
            "name": "Hawaii",
            "type": "state",
            "updatedAt": "2021-07-28T09:42:33.347Z",
            "values": Array [
              Object {
                "amount": 1000000,
                "application": "each",
                "billableLineItemId": 1289,
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "lineItemId": null,
                "quantity": 2,
                "rate": 1000000,
                "totalWithSurcharges": 1144000000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 1000000,
                "application": "each",
                "billableLineItemId": 1157,
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "lineItemId": null,
                "quantity": 1,
                "rate": 1000000,
                "totalWithSurcharges": 268840000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 1000000,
                "application": "each",
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "quantity": 59,
                "rate": 1000000,
                "thresholdId": 371,
                "thresholdItemId": null,
                "totalWithSurcharges": 1723390000,
                "type": "threshold",
              },
              Object {
                "amount": 3000000,
                "application": "ton",
                "billableServiceId": 1882,
                "calculation": "flat",
                "includingSurcharges": true,
                "perTonRate": 3000000,
                "quantity": 1,
                "rate": 3000000,
                "totalWithSurcharges": 143000000,
                "type": "service",
              },
              Object {
                "amount": 2000000,
                "application": "order",
                "calculation": "flat",
                "flatRate": true,
                "includingSurcharges": true,
                "materialId": 1819,
                "quantity": 1,
                "rate": 2000000,
                "totalWithSurcharges": 143000000,
                "type": "material",
              },
            ],
          },
          "2491": Object {
            "description": "Honolulu County",
            "name": "Honolulu County",
            "type": "county",
            "updatedAt": "2021-08-04T13:15:11.218Z",
            "values": Array [
              Object {
                "amount": 263120000,
                "application": null,
                "billableLineItemId": 1289,
                "calculation": "percentage",
                "includingSurcharges": true,
                "lineItemId": null,
                "percentageRate": 23000000,
                "quantity": 2,
                "rate": 23000000,
                "totalWithSurcharges": 1144000000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 61833200,
                "application": null,
                "billableLineItemId": 1157,
                "calculation": "percentage",
                "includingSurcharges": true,
                "lineItemId": null,
                "percentageRate": 23000000,
                "quantity": 1,
                "rate": 23000000,
                "totalWithSurcharges": 268840000,
                "type": "specificLineItem",
              },
              Object {
                "amount": 396379700,
                "application": null,
                "calculation": "percentage",
                "includingSurcharges": true,
                "percentageRate": 23000000,
                "quantity": 59,
                "rate": 23000000,
                "thresholdId": 371,
                "thresholdItemId": null,
                "totalWithSurcharges": 1723390000,
                "type": "threshold",
              },
              Object {
                "amount": 31460000,
                "application": null,
                "billableServiceId": 1882,
                "calculation": "percentage",
                "includingSurcharges": true,
                "percentageRate": 22000000,
                "quantity": 1,
                "rate": 22000000,
                "totalWithSurcharges": 143000000,
                "type": "service",
              },
              Object {
                "amount": 35750000,
                "application": null,
                "calculation": "percentage",
                "includingSurcharges": true,
                "materialId": 1819,
                "percentageRate": 25000000,
                "quantity": 1,
                "rate": 25000000,
                "totalWithSurcharges": 143000000,
                "type": "material",
              },
            ],
          },
        },
      ],
    },
    "grandTotal": 4276772900,
    "lineItemsTotal": 1086800000,
    "servicesTotal": 110000000,
    "surchargesTotal": 926430000,
    "taxesTotal": 796542900,
    "thresholdsTotal": 1357000000,
    "total": 2553800000,
  },
}
`;

exports[`calculatePrices should return null for billable services and line items if do not exist 1`] = `
Object {
  "prices": Array [
    Object {
      "lineItems": Array [
        Object {
          "price": null,
          "priceId": null,
          "quantity": 1,
          "total": null,
        },
        Object {
          "price": null,
          "priceId": null,
          "quantity": 1,
          "total": null,
        },
      ],
      "price": null,
      "priceId": null,
      "quantity": 1,
      "thresholds": Array [],
      "total": null,
    },
    Object {
      "lineItems": Array [
        Object {
          "price": null,
          "priceId": null,
          "quantity": 1,
          "total": null,
        },
        Object {
          "price": null,
          "priceId": null,
          "quantity": 2,
          "total": null,
        },
      ],
      "price": null,
      "priceId": null,
      "quantity": 2,
      "thresholds": Array [],
      "total": null,
    },
  ],
  "summary": Object {
    "billableItemsTotal": 0,
    "calculations": Object {
      "surcharges": null,
      "taxes": null,
    },
    "grandTotal": 0,
    "lineItemsTotal": 0,
    "servicesTotal": 0,
    "surchargesTotal": 0,
    "taxesTotal": 0,
    "thresholdsTotal": 0,
    "total": 0,
  },
}
`;

exports[`calculatePrices should return prices for billable services and line items if exist 1`] = `
Object {
  "prices": Array [
    Object {
      "lineItems": Array [
        Object {
          "price": 211000000,
          "priceId": 201,
          "quantity": 1,
          "total": 211000000,
        },
        Object {
          "price": 222000000,
          "priceId": 202,
          "quantity": 1,
          "total": 222000000,
        },
      ],
      "price": 111000000,
      "priceId": 101,
      "quantity": 1,
      "thresholds": Array [],
      "total": 111000000,
    },
    Object {
      "lineItems": Array [
        Object {
          "price": 211000000,
          "priceId": 201,
          "quantity": 1,
          "total": 211000000,
        },
        Object {
          "price": 222000000,
          "priceId": 202,
          "quantity": 2,
          "total": 444000000,
        },
      ],
      "price": 122000000,
      "priceId": 102,
      "quantity": 2,
      "thresholds": Array [],
      "total": 244000000,
    },
  ],
  "summary": Object {
    "billableItemsTotal": 1743000000,
    "calculations": Object {
      "surcharges": null,
      "taxes": null,
    },
    "grandTotal": 2098000000,
    "lineItemsTotal": 1743000000,
    "servicesTotal": 355000000,
    "surchargesTotal": 0,
    "taxesTotal": 0,
    "thresholdsTotal": 0,
    "total": 2098000000,
  },
}
`;

exports[`calculatePrices should return saved prices for existing order 1`] = `
Object {
  "prices": Array [
    Object {
      "lineItems": Array [
        Object {
          "price": 440000000,
          "priceId": 1,
          "quantity": 2,
          "total": 880000000,
        },
        Object {
          "price": 206800000,
          "priceId": 1,
          "quantity": 1,
          "total": 206800000,
        },
      ],
      "price": 110000000,
      "priceId": 1,
      "quantity": 1,
      "thresholds": Array [
        Object {
          "price": 23000000,
          "priceId": 1,
          "quantity": 59,
          "total": 1357000000,
        },
      ],
      "total": 110000000,
    },
  ],
  "summary": Object {
    "billableItemsTotal": 2443800000,
    "calculations": Object {
      "surcharges": Array [
        Array [
          Object {
            "amount": 3300000,
            "billableLineItemId": null,
            "billableServiceId": 1882,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1819,
            "quantity": 1,
            "surchargeId": 663,
            "thresholdId": null,
            "total": 110000000,
          },
          Object {
            "amount": 26400000,
            "billableLineItemId": 1289,
            "billableServiceId": null,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1819,
            "quantity": 2,
            "surchargeId": 663,
            "thresholdId": null,
            "total": 880000000,
          },
          Object {
            "amount": 6200000,
            "billableLineItemId": 1157,
            "billableServiceId": null,
            "calculation": "percentage",
            "materialBasedPricing": true,
            "materialId": 1819,
            "quantity": 1,
            "surchargeId": 663,
            "thresholdId": null,
            "total": 206800000,
          },
          Object {
            "amount": 29700000,
            "billableLineItemId": null,
            "billableServiceId": 1882,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1819,
            "quantity": 1,
            "surchargeId": 664,
            "thresholdId": null,
            "total": 110000000,
          },
          Object {
            "amount": 237600000,
            "billableLineItemId": 1289,
            "billableServiceId": null,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1819,
            "quantity": 2,
            "surchargeId": 664,
            "thresholdId": null,
            "total": 880000000,
          },
          Object {
            "amount": 55840000,
            "billableLineItemId": 1157,
            "billableServiceId": null,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": 1819,
            "quantity": 1,
            "surchargeId": 664,
            "thresholdId": null,
            "total": 206800000,
          },
          Object {
            "amount": 366390000,
            "billableLineItemId": null,
            "billableServiceId": null,
            "calculation": "percentage",
            "materialBasedPricing": false,
            "materialId": null,
            "quantity": 59,
            "surchargeId": 664,
            "thresholdId": 371,
            "total": 1357000000,
          },
          Object {
            "amount": 201000000,
            "billableLineItemId": null,
            "billableServiceId": null,
            "calculation": "flat",
            "materialBasedPricing": false,
            "materialId": 1819,
            "quantity": 1,
            "surchargeId": 694,
            "thresholdId": null,
          },
        ],
      ],
      "taxes": null,
    },
    "grandTotal": 3480230000,
    "lineItemsTotal": 1086800000,
    "servicesTotal": 110000000,
    "surchargesTotal": 926430000,
    "taxesTotal": 0,
    "thresholdsTotal": 1357000000,
    "total": 2553800000,
  },
}
`;
